v5.8.2/api-reference/journey-actions.md
---
layout: doc
prev:
  text: 'Return Back'
  link: 'javascript:history.back()'
---

# Journey Actions

## `Wait`

This action pauses the journey for a specified period. Optionally, a delivery window can be configured so that after the base wait expires, subscribers only proceed during the allowed days and time range.

```json
{
  "ActionID": 1,
  "Action": "Wait",
  "WaitUnit": "days",
  "WaitAmount": 2,
  "TimeConstraintEnabled": true,
  "DontSendBefore": "09:00",
  "DontSendAfter": "19:00",
  "AllowedDays": ["mon", "tue", "wed", "thu", "fri"],
  "Notes": "Administrative note"
}
```

| Parameter              | Description                                                                                                      |
|------------------------|------------------------------------------------------------------------------------------------------------------|
| ActionID               | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action                 | Set this parameter to `Wait`.                                                                                    |
| Published              | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| WaitUnit               | Set to one of `seconds`, `minutes`, `hours`, `days`.                                                             |
| WaitAmount             | Set to an integer value based on the `WaitUnit` parameter.                                                       |
| TimeConstraintEnabled  | Set to `true` to enable delivery window constraints. When disabled (default: `false`), the action proceeds immediately after the base wait expires. |
| DontSendBefore         | Earliest time of day when subscribers may proceed, in `HH:MM` format. Default: `09:00`. Only applies when `TimeConstraintEnabled` is `true`. |
| DontSendAfter          | Latest time of day when subscribers may proceed, in `HH:MM` format. Must be later than `DontSendBefore`. Default: `19:00`. Only applies when `TimeConstraintEnabled` is `true`. |
| AllowedDays            | Array of day-of-week abbreviations when subscribers may proceed. Values: `mon`, `tue`, `wed`, `thu`, `fri`, `sat`, `sun`. Default: all seven days. At least one day must be selected. Only applies when `TimeConstraintEnabled` is `true`. |
| Notes                  | The administrative note for the journey action.                                                                  |

**Delivery Window Behavior:**

When `TimeConstraintEnabled` is `true`, after the base wait duration expires the system checks whether the current day and time fall within the delivery window:

- If the current day is in `AllowedDays` and the current time is between `DontSendBefore` and `DontSendAfter`, the subscriber proceeds immediately.
- If the current day is allowed but the current time is before `DontSendBefore`, the subscriber is held until `DontSendBefore` on the same day.
- If the current day is allowed but the current time is past `DontSendAfter`, or the current day is not in `AllowedDays`, the subscriber is held until `DontSendBefore` on the next allowed day.

## `UpdateCustomFieldValue`

This action updates a subscriber's custom field.

```json
{
  "ActionID": 1,
  "Action": "UpdateCustomFieldValue",
  "TargetCustomFieldID": 10,
  "NewCustomFieldValue": "New Value",
  "Notes": "Administative note"
}
```

| Parameter           | Description                                                                                                      |
|---------------------|------------------------------------------------------------------------------------------------------------------|
| ActionID            | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action              | Set this parameter to `UpdateCustomFieldValue`.                                                                  |
| Published           | Set this parameter to `true` to activate it. Default: `false`.                                                   |
| TargetCustomFieldID | The ID of the subscriber's custom field.                                                                         |
| NewCustomFieldValue | The new value for the custom field.                                                                              |
| Published           | If this is set to `true`, the action will be enabled. Values: `true`, `false`                                    |

## `Unsubscribe`

This action unsubscribes the subscriber from the target list.

```json
{
  "ActionID": 1,
  "Action": "Unsubscribe",
  "TargetListID": 10,
  "Notes": "Administative note"
}
```

| Parameter    | Description                                                                                                      |
|--------------|------------------------------------------------------------------------------------------------------------------|
| ActionID     | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action       | Set this parameter to `Unsubscribe`.                                                                             |
| Published    | Set this parameter to `true` to activate it. Default: `false`.                                                   |
| TargetListID | The ID of the target list from which to unsubscribe.                                                             |
| Published    | If this is set to `true`, the action will be enabled. Values: `true`, `false`                                    |

## `ExitJourney`

This action stops the specified journey for the subscriber.

```json
{
  "ActionID": 1,
  "Action": "ExitJourney",
  "TargetJourneyID": 10,
  "Notes": "Administative note"
}
```

or an array of journey ID numbers can be passed as shown below:

```json
{
  "ActionID": 1,
  "Action": "ExitJourney",
  "TargetJourneyID": [
    10,
    11,
    12
  ],
  "Notes": "Administative note"
}
```

| Parameter       | Description                                                                                                      |
|-----------------|------------------------------------------------------------------------------------------------------------------|
| ActionID        | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action          | Set this parameter to `ExitJourney`.                                                                             |
| Published       | Set this parameter to `true` to activate it. Default: `false`.                                                   |
| TargetJourneyID | The ID of the journey to stop for the subscriber. Alternatively, it can be an array of Journey ID numbers.       |
| Published       | If this is set to `true`, the action will be enabled. Values: `true`, `false`                                    |

## `ExitThisJourney`

This action stops the current journey for the subscriber.

```json
{
  "ActionID": 1,
  "Action": "ExitThisJourney",
  "Notes": "Administative note"
}
```

| Parameter | Description                                                                                                      |
|-----------|------------------------------------------------------------------------------------------------------------------|
| ActionID  | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action    | Set this parameter to `ExitThisJourney`.                                                                         |
| Published | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |

## `ExitAllOtherJourneys`

This action stops all journeys except the current one for the subscriber.

```json
{
  "ActionID": 1,
  "Action": "ExitAllOtherJourneys",
  "Notes": "Administative note"
}
```

| Parameter | Description                                                                                                      |
|-----------|------------------------------------------------------------------------------------------------------------------|
| ActionID  | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action    | Set this parameter to `ExitAllOtherJourneys`.                                                                    |
| Published | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |

## `ExitAllJourneys`

This action stops all active journeys of the subscriber.

```json
{
  "ActionID": 1,
  "Action": "ExitAllJourneys",
  "Notes": "Administative note"
}
```

| Parameter | Description                                                                                                      |
|-----------|------------------------------------------------------------------------------------------------------------------|
| ActionID  | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action    | Set this parameter to `ExitAllJourneys`.                                                                         |
| Published | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |

## `Webhook`

This action triggers a webhook.

```json
{
  "ActionID": 1,
  "Action": "Webhook",
  "WebhookURL": "",
  "Notes": "Administative note"
}
```

| Parameter  | Description                                                                                                      |
|------------|------------------------------------------------------------------------------------------------------------------|
| ActionID   | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action     | Set this parameter to `Webhook`.                                                                                 |
| Published  | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| WebhookURL | The URL of the webhook to trigger.                                                                               |

## `StartJourney`

This action starts a journey for the subscriber.

```json
{
  "ActionID": 1,
  "Action": "StartJourney",
  "TargetJourneyID": 0,
  "Notes": "Administative note"
}
```

| Parameter       | Description                                                                                                      |
|-----------------|------------------------------------------------------------------------------------------------------------------|
| ActionID        | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action          | Set this parameter to `StartJourney`.                                                                            |
| Published       | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| TargetJourneyID | The ID of the journey to start for the subscriber.                                                               |

## `Subscribe`

This action subscribes the subscriber to a list.

```json
{
  "ActionID": 1,
  "Action": "Subscribe",
  "TargetListID": 0,
  "Notes": "Administative note"
}
```

| Parameter    | Description                                                                                                      |
|--------------|------------------------------------------------------------------------------------------------------------------|
| ActionID     | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action       | Set this parameter to `Subscribe`.                                                                               |
| Published    | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| TargetListID | The ID of the list to which to subscribe.                                                                        |

## `AddTag`

This action adds a tag to the subscriber.

```json
{
  "ActionID": 1,
  "Action": "AddTag",
  "TargetTagID": 0,
  "Notes": "Administative note"
}
```

| Parameter   | Description                                                                                                      |
|-------------|------------------------------------------------------------------------------------------------------------------|
| ActionID    | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action      | Set this parameter to `AddTag`.                                                                                  |
| Published   | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| TargetTagID | The ID of the tag to add.                                                                                        |

## `RemoveTag`

This action removes a tag from the subscriber.

```json
{
  "ActionID": 1,
  "Action": "RemoveTag",
  "TargetTagID": 0,
  "Notes": "Administative note"
}
```

| Parameter   | Description                                                                                           |
|-------------|-------------------------------------------------------------------------------------------------------|
| ActionID    | Provide an ActionID to update a specific action. Set this parameter to `null` to create a new action. |
| Action      | Set this parameter to `RemoveTag`.                                                                    |
| Published   | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`       |
| TargetTagID | The ID of the tag.                                                                                    |

## YesNo

This action will implement a basic yes or no condition with a single criteria and set of actions for both `yes` and `no`
cases.

::: warning
This action is deprecated and will be removed in one of the coming Octeth version releases. Please use `Decision` action
instead.
:::

```json
{
  "ActionID": null,
  "Action": "YesNo",
  "Notes": "Administative note",
  "CriteriaLeft": "EmailAddress",
  "CriteriaOperator": "Contains",
  "CriteriaRight": "@gmail",
  "CriteriaOption": "",
  "Actions": {
    "Yes": [],
    "No": []
  }
}
```

| Parameter        | Description                                                                                                                                                                                                                                                                      |
|------------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| ActionID         | Provide an ActionID to update a specific action. Set this parameter to `null` to create a new action.                                                                                                                                                                            |
| Action           | Set this parameter to `YesNo`.                                                                                                                                                                                                                                                   |
| Published        | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                                                                                                                                                                                  |
| CriteriaLeft     | The left side of the criteria. It can be `SubscriberID`, `EmailAddress`, `BounceType`, `SubscriptionStatus`, `SubscriptionDate`, `SubscriptionIP`, `OptInDate`, `CustomField:XX` (XX represents the custom field ID), `Opens`, `Clicks`                                          |
| CriteriaOperator | Set the operator to compare left to the right. It can be `Contains`, `Does not contain`, `Begins with`, `Ends with`, `Equals to`, `Is greater than`, `Is smaller than`, `Is before`, `Is after`, `Is set`, `Is not set`, `Is`, `Is not`, `At most`, `At least`, `Only`           |
| CriteriaRight    | It can be any value or an array of campaign or autoresponder ID numbers. If you are going to provide campaign ID numbers, ID numbers should have a prefix `c`. For autoresponders, prefix `a`. Example: `['c100', 'c101']` for campaigns, `['a100', 'a101']` for autoresponders. |
| CriteriaOption   | This parameter accepts `any` or `all`. It defines how to match campaign or autoresponder opens or clicks.                                                                                                                                                                        |
| Actions.Yes      | The array of action objects in case of `Yes` condition.                                                                                                                                                                                                                          |
| Actions.No       | The array of action objects in case of `No` condition.                                                                                                                                                                                                                           |

## `Decision`

This action will implement a decision with a criteria and set of actions for both `true` and `false` cases.

```json
{
  "ActionID": 1,
  "Action": "Decision",
  "Notes": "Administative note",
  "CriteriaOperator": "or",
  "Criteria": [],
  "Actions": {
    "True": [],
    "False": []
  }
}
```

| Parameter        | Description                                                                                           |
|------------------|-------------------------------------------------------------------------------------------------------|
| ActionID         | Provide an ActionID to update a specific action. Set this parameter to `null` to create a new action. |
| Action           | Set this parameter to `Decision`.                                                                     |
| Published        | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`       |
| CriteriaOperator | It can be set as `and`, `or`. Default value is `and`                                                  |
| Criteria         | The array of criteria. [Please refer to the criteria object below](/v5.8.2/api-reference/criteria-syntax).   |
| Actions          | The array of action objects in case `True` and `False` cases.                                         |

## `SendEmail`

This action sends the email to the subscriber.

```json
{
  "ActionID": 1,
  "Action": "SendEmail",
  "Notes": "Administative note",
  "EmailID": 1,
  "SenderDomainID": 2,
  "From": {
    "Name": "From Name",
    "Email": "from@email.com"
  },
  "ReplyTo": {
    "Name": "Reply-To Name",
    "Email": "replyto@email.com"
  },
  "CC": [
    {
      "Name": "CC Name",
      "Email": "cc@email.com"
    }
  ],
  "BCC": [
    {
      "Name": "BCC Name",
      "Email": "bcc@email.com"
    }
  ]
}
```

| Parameter      | Description                                                                                                      |
|----------------|------------------------------------------------------------------------------------------------------------------|
| ActionID       | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action         | Set this parameter to `SendEmail`.                                                                               |
| Published      | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| EmailID        | The ID of the target email content.                                                                              |
| SenderDomainID | The ID of the email gateway sender domain to use when sending the email.                                         |
| From           | `From.Name` and `From.Email` parameters to set as `From` header of the email.                                    |
| Reply-To       | `ReplyTo.Name` and `ReplyTo.Email` parameters to set as `Reply-To` header of the email.                          |
| CC             | The array with `Name` and `Email` parameters to set as `CC` header of the email.                                 |
| BCC            | The array with `Name` and `Email` parameters to set as `BCC` header of the email.                                |

## `SendSMS`

This action sends an SMS message to the subscriber.

```json
{
  "ActionID": 1,
  "Action": "SendSMS",
  "message": "Hello {{EmailAddress}}, check out our latest offers!",
  "gateway_id": 5,
  "sender_id": "+15551234567",
  "skip_if_no_phone": true,
  "max_retry_attempts": 3,
  "priority": "normal",
  "delivery_window_enabled": false,
  "delivery_window": {
    "timezone": "UTC",
    "start_time": "09:00",
    "end_time": "18:00",
    "days": ["mon", "tue", "wed", "thu", "fri"]
  },
  "include_link": false,
  "link_url": "",
  "link_expiry_hours": 72,
  "link_utm_source": "",
  "link_utm_medium": "",
  "link_utm_campaign": "",
  "Notes": "Administrative note"
}
```

| Parameter              | Description                                                                                                      |
|------------------------|------------------------------------------------------------------------------------------------------------------|
| ActionID               | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action                 | Set this parameter to `SendSMS`.                                                                                 |
| Published              | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| message                | The SMS message body. Supports personalization tags (e.g., `{{EmailAddress}}`).                                  |
| gateway_id             | The ID of the SMS gateway to use for sending.                                                                    |
| sender_id              | The sender ID or phone number to use. If not set, the gateway default is used.                                   |
| skip_if_no_phone       | If `true`, skips the SMS if the subscriber has no phone number. Default: `true`.                                 |
| max_retry_attempts     | Maximum number of retry attempts for failed deliveries. Default: system setting.                                 |
| priority               | Delivery priority. Values: `normal`, `high`. Default: `normal`.                                                  |
| delivery_window_enabled| If `true`, SMS will only be sent within the configured delivery window. Default: `false`.                        |
| delivery_window        | Delivery window configuration object with `timezone` (string), `start_time` (HH:MM), `end_time` (HH:MM), and `days` (array of day abbreviations: `mon`, `tue`, `wed`, `thu`, `fri`, `sat`, `sun`). |
| include_link           | If `true`, includes a trackable link in the SMS. Default: `false`.                                               |
| link_url               | The URL to include when `include_link` is `true`.                                                                |
| link_expiry_hours      | Number of hours before the tracking link expires. Default: `72`.                                                 |
| link_utm_source        | UTM source parameter for link tracking.                                                                          |
| link_utm_medium        | UTM medium parameter for link tracking.                                                                          |
| link_utm_campaign      | UTM campaign parameter for link tracking.                                                                        |
| Notes                  | The administrative note for the journey action.                                                                   |

## `Debug`

::: warning
This action is for internal debugging and development purposes only. Do not use in production journeys.
:::

This action pauses the journey for a specified number of seconds and logs a debug message. It is intended for testing and troubleshooting journey execution.

```json
{
  "ActionID": 1,
  "Action": "Debug",
  "SleepSeconds": 5,
  "DebugMessage": "Checkpoint reached",
  "Notes": "Administrative note"
}
```

| Parameter    | Description                                                                                                      |
|--------------|------------------------------------------------------------------------------------------------------------------|
| ActionID     | If provided, this will update the specified action. If not, set this parameter to `null` to create a new action. |
| Action       | Set this parameter to `Debug`.                                                                                   |
| Published    | If this is set to `true`, the action will be enabled. Values: `true`, `false`. Default: `false`                  |
| SleepSeconds | Number of seconds to pause the journey execution. Default: `0`.                                                  |
| DebugMessage | A debug message to log during execution.                                                                         |
| Notes        | The administrative note for the journey action.                                                                   |
